@@ -1,7 +1,11 @@
-If you are updating from a previous version make sure every update info from the version
-your are updating from is done.
+If you are updating from a previous version make sure every update info from
+the version your are updating from is done.
 
 x.x
-+ Run (after authentication) at /index.php?p=stats the "Search index update" to make the
-search work again correctly. At success, there is no confirmation. To validate you can now search
-for single words case-insensitive.
++ Run (after authentication) at /index.php?p=stats the "Search index update"
+to make the search work again correctly. At success, there is no confirmation.
+To validate you can now search for single words case-insensitive.
+
++ Update config file with tow new settings. See config.default for more info
+define('EMAIL_JOB_PROTECT', false);
+define('EMAIL_JOB_PROTECT_SECRET', 'SOME_SECRET_STRING');
